fix issue play music on iphone

--- a/app/globals.css
+++ b/app/globals.css
@@ -291,13 +291,9 @@ body {
 
 .music-player {
   position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 1px;
-  height: 1px;
-  border: 0;
-  opacity: 0.01;
-  overflow: hidden;
+  width: 0;
+  height: 0;
+  opacity: 0;
   pointer-events: none;
   z-index: -1;
 }
